--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>Contact Me</h2>
         <p>I'm actively looking for new opportunities in the field of data science and analytics. Feel free to connect with me on LinkedIn or send me an email!</p>
         <ul>
-            <li>Email: <a href="mailto:victor.parcigneau@gmail.com">your.email@example.com</a></li>
+            <li>Email: <a href="mailto:victor.parcigneau@gmail.com">victor.parcigneau@gmail.com</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/victor-parcigneau-7932a8176/">Victor Parcigneau's LinkedIn Profile</a></li>
             <li>GitHub: <a href="https://github.com/SnoopB0b">GitHub Profile</a></li>
         </ul>
