--- a/index.html
+++ b/index.html
@@ -3,71 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor Parcigneau - Data Analyst</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Victor Parcigneau - Data Scientist</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
 </head>
 <body>
-
+    <!-- Header Section -->
     <header>
         <h1>Victor Parcigneau</h1>
-        <p>Data Analyst - Curieux, persévérant et dynamique</p>
-        <p>Contact: <a href="mailto:v.parcigneau@laposte.net">v.parcigneau@laposte.net</a> | Tel: 07.72.43.15.41</p>
+        <p>Data Scientist | Data Analyst | Data-Driven Problem Solver</p>
     </header>
 
+    <!-- Navigation Links -->
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm a 23-year-old data enthusiast looking to enhance my skills and knowledge in data science and analytics. Passionate about numbers, analysis, IT, and finance, I am known for my patience, curiosity, and strong attention to detail.</p>
+        <p>Welcome! I'm Victor Parcigneau, a data scientist with expertise in data analysis, machine learning, and business intelligence. With experience in the financial sector, I bring a strong foundation in data-driven solutions and a commitment to continuous learning and innovation.</p>
+        <p>For more details about my experience and professional background, <a href="CV.html" target="_blank">you can look my CV here</a>.</p>
     </section>
 
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>2022 - 2024</strong>: Master's Degree in Econometrics and Statistics, Data Science Specialization - ISFA, Lyon</li>
-            <li><strong>2018 - 2022</strong>: Bachelor’s Degree in Mathematics-Computer Science with Economics Option - Claude Bernard University, Lyon 1</li>
-            <li><strong>2015 - 2018</strong>: Baccalauréat S (Science) with Honors - Lycée René Cassin, Tarare</li>
-        </ul>
-    </section>
-
+    <!-- Skills Section -->
     <section id="skills">
         <h2>Skills</h2>
-        <h3>Technical Skills</h3>
-        <p>Programming Languages: Python, Shell, Linux, JavaScript, C++, SAS/SQL, VBA</p>
-        <p>Software and Tools: Excel, Word, PowerPoint, Adobe Premiere, Photoshop, WordPress, R, Stata, LaTeX, Filmora</p>
-
-        <h3>Professional Skills</h3>
         <ul>
-            <li>Strong rigor and concentration</li>
-            <li>Good analytical skills and numerical sense</li>
-            <li>Adaptable and curious</li>
+            <li>Data Analysis: SQL, Excel, Python</li>
+            <li>Machine Learning: scikit-learn, TensorFlow</li>
+            <li>Business Intelligence: Power BI, Tableau</li>
+            <li>Programming: Python, R, VBA</li>
+            <li>Database Management: SQL, Big Data Tools</li>
         </ul>
     </section>
 
-    <section id="experience">
-        <h2>Professional Experience</h2>
-        <ul>
-            <li><strong>2023 - 2024</strong>: Data Analyst Intern and Apprentice - Delubac Bank. Developed various statistical tools (Excel, SAS) and automated monthly and quarterly accounting reports.</li>
-            <li><strong>2017 - 2022</strong>: Private Tutor - Provided English and mathematics tutoring for middle school, high school, and university levels.</li>
-        </ul>
-    </section>
-
+    <!-- Projects Section -->
     <section id="projects">
-        <h2>Academic Projects</h2>
+        <h2>Projects</h2>
         <ul>
-            <li>Econometrics Report on Football using Excel and Python</li>
-            <li>Thesis on Creating an AI for Fraud Detection in Banking</li>
-            <li>Research Paper (TER) on Econometrics and Crime using Excel, R, and LaTeX</li>
-            <li>Developed an AI for Anomaly Detection in Global Stock Markets</li>
+            <li><a href="https://github.com/your-github-profile/project1">Project 1: Financial Data Analysis</a></li>
+            <li><a href="https://github.com/your-github-profile/project2">Project 2: Predictive Modeling for Customer Retention</a></li>
+            <li><a href="https://github.com/your-github-profile/project3">Project 3: Data Visualization Dashboard</a></li>
         </ul>
     </section>
 
-    <section id="interests">
-        <h2>Interests</h2>
-        <p>Current events, geopolitics, history, IT, reading, and cinema. Also an avid sports enthusiast (football, volleyball, tennis) and enjoys video/photo editing.</p>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>I'm actively looking for new opportunities in the field of data science and analytics. Feel free to connect with me on LinkedIn or send me an email!</p>
+        <ul>
+            <li>Email: <a href="mailto:victor.parcigneau@gmail.com">victor.parcigneau@gmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/victor-parcigneau-7932a8176/">Victor Parcigneau's LinkedIn Profile</a></li>
+            <li>GitHub: <a href="https://github.com/SnoopB0b">GitHub Profile</a></li>
+        </ul>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Victor Parcigneau. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
