--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="perso.html">Personal</a></li>
         </ul>
     </nav>
 
@@ -61,6 +62,12 @@
             <li>LinkedIn: <a href="https://www.linkedin.com/in/victor-parcigneau-7932a8176/">Victor Parcigneau's LinkedIn Profile</a></li>
             <li>GitHub: <a href="https://github.com/SnoopB0b">GitHub Profile</a></li>
         </ul>
+    </section>
+
+    <!-- Personal Section -->
+    <section id="personal">
+        <h2>For Those Who Know Me Personally</h2>
+        <p>This page is dedicated to friends and family who know me well. Feel free to visit <a href="perso.html">here</a> to see more personal details!</p>
     </section>
 
     <!-- Footer -->
