--- a/CV.html
+++ b/CV.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Victor Parcigneau</h1>
-        <p>Data Analyst - Curieux, persévérant et dynamique</p>
+        <p>Data Analyst - Curious, persistent and dynamic</p>
         <p>Contact: <a href="mailto:v.parcigneau@laposte.net">v.parcigneau@laposte.net</a> | Tel: 07.72.43.15.41</p>
     </header>
 
