--- a/perso.html
+++ b/perso.html
@@ -9,7 +9,7 @@
         // Fonction pour vérifier le mot de passe
         function checkPassword() {
             var password = document.getElementById("password").value;
-            var correctPassword = "DenisClot"; // Remplacez par le mot de passe souhaité
+            var correctPassword = "JeanJacquesGolmon"; // Remplacez par le mot de passe souhaité
 
             if (password === correctPassword) {
                 document.getElementById("content").style.display = "block";  // Afficher le contenu
@@ -33,7 +33,8 @@
         <p>Indice : Mon premier est la première partie du prénom composé d'un célèbre professeur de l'ISFA,</p>
         <p>Mon second est le prénom de celui qui est l'ombre de son ombre, l'ombre de sa main, l'ombre de son chien etc...</p>
         <p>Mon troisième est le gentilé d'un pays d'Asie en verlan. Aussi utilisé comme interjection validiste à but humoristique sur Twitter.</p>
-        <p>Mon tout est mon pseudonyme sur le jeu sur lequel j'ai passé le plus de temps (trop).</p>
+        <p>Mon tout est mon pseudonyme sur le jeu sur lequel j'ai passé le plus de temps (trop) (La faute d'orthographe est corrigé bien sûr).</p>$
+        <p>Tout attaché et faites gaffe aux majuscules.</p>
         <input type="password" id="password" placeholder="Enter password" />
         <button onclick="checkPassword()">Submit</button>
     </section>
