--- a/perso.html
+++ b/perso.html
@@ -40,10 +40,10 @@
     </section>
 
     <!-- Contenu protégé -->
-    <section id="content" style="display:none;">
-        <h2>Personal Information</h2>
-        <p>This section contains personal details about me for those who know me well.</p>
-        <!-- Ajouter ici votre contenu personnel -->
+    <section id="content" style="display:none; text-align: center;">
+        <h2>FÉLICITATIONS CAMARADE !!</h2>
+        <p>Nous allons pouvoir planifier la révolution à l'abri des regards malveillants</p>
+        <img src="photo.jpg" alt="Image secrète" style="width: 80%; max-width: 600px; margin-top: 20px;">
     </section>
 
     <!-- Footer -->
